# hatch-pyinstaller

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
hatch_pyinstaller/: __init__.py  builder.py  hooks.py
